--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -116,7 +116,9 @@
                     <connections>
                         <outlet property="counterLabel" destination="ylw-al-lSE" id="zar-dj-kdO"/>
                         <outlet property="imageView" destination="3HD-RR-mGo" id="yhz-p4-boM"/>
+                        <outlet property="noButton" destination="cfg-RU-UhO" id="JpM-Fq-CkP"/>
                         <outlet property="textLabel" destination="rJH-Pu-7zs" id="ZsI-sn-kCv"/>
+                        <outlet property="yesButton" destination="sBU-pA-qdh" id="pJi-PP-6Nx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
